# minizip

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  test_compression.py  test_filter.py
gui/: gui_main.py
include/: BackupEngine.h  CRC32.h
src/: BackupEngine.cpp  Bridge.cpp  main.cpp
